# ustdex

./: .clang-format  .clangd  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: linux.yml  macos.yml  main.yml  windows.yml
cmake/: clangd_compile_info.cmake  cmake_utilities.cmake
docs/: CMakeLists.txt  Doxyfile.in
docs/source/: conf.py  index.rst
docs/source/reference/: index.rst
examples/: CMakeLists.txt  asio_thread_pool.hpp  parallel_sort.hpp  scratch.cpp  scratch.cu
examples/detail/: _clangd_helper_file.cpp
include/ustdex/: ustdex.hpp
include/ustdex/cuda/: stream_context.cuh
include/ustdex/detail/: atomic.hpp  basic_sender.hpp  binder_closure.hpp  completion_signatures.hpp  concepts.hpp  conditional.hpp  config.hpp  continue_on.hpp  continues_on.hpp  cpos.hpp  env.hpp  epilogue.hpp  exception.hpp  exclusive_scan.hpp  fwd_rcvr.hpp  just.hpp  just_from.hpp  lazy.hpp  let_value.hpp  meta.hpp  preprocessor.hpp  prologue.hpp  queries.hpp  rcvr_ref.hpp  rcvr_with_env.hpp  read_env.hpp  receiver_with_env.hpp  run_loop.hpp  sequence.hpp  sexpr.hpp  start_detached.hpp  start_on.hpp  starts_on.hpp  static_thread_pool.hpp  stop_token.hpp  stop_when.hpp  stop_with.hpp  sync_wait.hpp  then.hpp  thread.hpp  (+8 more)
scripts/: build_cmake_debug.sh  build_debug.sh  create_release.sh  format.sh  run_tests.sh
scripts/git_hooks/: pre-commit
scripts/windows/: build_cmake_debug.ps1  build_debug.ps1  create_release.ps1  run_tests.ps1
tests/: CMakeLists.txt  test_conditional.cpp  test_continue_on.cpp  test_continues_on.cpp  test_just.cpp  test_sequence.cpp  test_when_all.cpp
tests/common/: catch2.hpp  checked_receiver.hpp  error_scheduler.hpp  impulse_scheduler.hpp  inline_scheduler.hpp  stopped_scheduler.hpp  utility.hpp
tests/cuda/: CMakeLists.txt  test_just.cu
tests/utility/: checked_receiver.hpp  stopped_scheduler.hpp  utility.hpp
